{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 93,
  "lineage": "a7d1081d-31a2-de81-212f-d83bffc4a1ca",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:network-acl/acl-0596072fb7f296ae3",
            "default_network_acl_id": "acl-0596072fb7f296ae3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0596072fb7f296ae3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "211125301370",
            "subnet_ids": [
              "subnet-0028fc9dbd225b7cb",
              "subnet-0266810c787d8136e",
              "subnet-04fcde1e9e27ede61",
              "subnet-08bb305bba75d268d",
              "subnet-0b292fefe9d8c0d2d",
              "subnet-0d9d5bffe14aedb1a"
            ],
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-default",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-default",
              "Project": "live",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:route-table/rtb-00757ee49bc765331",
            "default_route_table_id": "rtb-00757ee49bc765331",
            "id": "rtb-00757ee49bc765331",
            "owner_id": "211125301370",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-default",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-default",
              "Project": "live",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:security-group/sg-0dd0422ca21ded3a0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0dd0422ca21ded3a0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "211125301370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-default",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-default",
              "Project": "live",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b61ed72e62d93762",
            "arn": "arn:aws:ec2:us-east-1:211125301370:elastic-ip/eipalloc-0b61ed72e62d93762",
            "association_id": "eipassoc-03f8d0701e4a8324a",
            "domain": "vpc",
            "id": "eipalloc-0b61ed72e62d93762",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07310a33587e2cdb9",
            "private_dns": "ip-10-0-101-23.ec2.internal",
            "private_ip": "10.0.101.23",
            "public_dns": "ec2-18-235-157-59.compute-1.amazonaws.com",
            "public_ip": "18.235.157.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-us-east-1a",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-us-east-1a",
              "Project": "live",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f39cc80242ed85df",
            "arn": "arn:aws:ec2:us-east-1:211125301370:elastic-ip/eipalloc-0f39cc80242ed85df",
            "association_id": "eipassoc-0910ab0035e3b16c7",
            "domain": "vpc",
            "id": "eipalloc-0f39cc80242ed85df",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a90907b09c832bc1",
            "private_dns": "ip-10-0-102-148.ec2.internal",
            "private_ip": "10.0.102.148",
            "public_dns": "ec2-54-210-175-73.compute-1.amazonaws.com",
            "public_ip": "54.210.175.73",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-us-east-1b",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-us-east-1b",
              "Project": "live",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093a46302a6206d98",
            "arn": "arn:aws:ec2:us-east-1:211125301370:elastic-ip/eipalloc-093a46302a6206d98",
            "association_id": "eipassoc-01bb0038abccf3a15",
            "domain": "vpc",
            "id": "eipalloc-093a46302a6206d98",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04235a1d1a5002e3d",
            "private_dns": "ip-10-0-103-101.ec2.internal",
            "private_ip": "10.0.103.101",
            "public_dns": "ec2-34-227-125-148.compute-1.amazonaws.com",
            "public_ip": "34.227.125.148",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-us-east-1c",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-us-east-1c",
              "Project": "live",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:internet-gateway/igw-07887aad6ac354e84",
            "id": "igw-07887aad6ac354e84",
            "owner_id": "211125301370",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc",
              "Project": "live",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b61ed72e62d93762",
            "association_id": "eipassoc-03f8d0701e4a8324a",
            "connectivity_type": "public",
            "id": "nat-0f110a8931822c23c",
            "network_interface_id": "eni-07310a33587e2cdb9",
            "private_ip": "10.0.101.23",
            "public_ip": "18.235.157.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0028fc9dbd225b7cb",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-us-east-1a",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-us-east-1a",
              "Project": "live",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f39cc80242ed85df",
            "association_id": "eipassoc-0910ab0035e3b16c7",
            "connectivity_type": "public",
            "id": "nat-00a63d95bff3928b4",
            "network_interface_id": "eni-0a90907b09c832bc1",
            "private_ip": "10.0.102.148",
            "public_ip": "54.210.175.73",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b292fefe9d8c0d2d",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-us-east-1b",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-us-east-1b",
              "Project": "live",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093a46302a6206d98",
            "association_id": "eipassoc-01bb0038abccf3a15",
            "connectivity_type": "public",
            "id": "nat-0fdf19842cd08a37e",
            "network_interface_id": "eni-04235a1d1a5002e3d",
            "private_ip": "10.0.103.101",
            "public_ip": "34.227.125.148",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08bb305bba75d268d",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-us-east-1c",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-us-east-1c",
              "Project": "live",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03bc329fc77b7949c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f110a8931822c23c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03bc329fc77b7949c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05d4d24b89ac1a2ec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00a63d95bff3928b4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d4d24b89ac1a2ec",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e3af1fe8dc3f365c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fdf19842cd08a37e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3af1fe8dc3f365c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07887aad6ac354e84",
            "id": "r-rtb-0e506a80c36529f661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e506a80c36529f66",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:route-table/rtb-03bc329fc77b7949c",
            "id": "rtb-03bc329fc77b7949c",
            "owner_id": "211125301370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f110a8931822c23c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-private-us-east-1a",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-private-us-east-1a",
              "Project": "live",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:route-table/rtb-05d4d24b89ac1a2ec",
            "id": "rtb-05d4d24b89ac1a2ec",
            "owner_id": "211125301370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00a63d95bff3928b4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-private-us-east-1b",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-private-us-east-1b",
              "Project": "live",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:route-table/rtb-0e3af1fe8dc3f365c",
            "id": "rtb-0e3af1fe8dc3f365c",
            "owner_id": "211125301370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fdf19842cd08a37e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-private-us-east-1c",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-private-us-east-1c",
              "Project": "live",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:route-table/rtb-0e506a80c36529f66",
            "id": "rtb-0e506a80c36529f66",
            "owner_id": "211125301370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07887aad6ac354e84",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-public",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-public",
              "Project": "live",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0552ea2a578a91780",
            "route_table_id": "rtb-03bc329fc77b7949c",
            "subnet_id": "subnet-0d9d5bffe14aedb1a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0695c72b4d3496d4a",
            "route_table_id": "rtb-05d4d24b89ac1a2ec",
            "subnet_id": "subnet-04fcde1e9e27ede61"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04148f791a55a7449",
            "route_table_id": "rtb-0e3af1fe8dc3f365c",
            "subnet_id": "subnet-0266810c787d8136e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dac26caf2bf9d048",
            "route_table_id": "rtb-0e506a80c36529f66",
            "subnet_id": "subnet-0028fc9dbd225b7cb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09215d8fa7444f139",
            "route_table_id": "rtb-0e506a80c36529f66",
            "subnet_id": "subnet-0b292fefe9d8c0d2d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05db2aaf056db1975",
            "route_table_id": "rtb-0e506a80c36529f66",
            "subnet_id": "subnet-08bb305bba75d268d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:subnet/subnet-0d9d5bffe14aedb1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9d5bffe14aedb1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125301370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-private-us-east-1a",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-private-us-east-1a",
              "Project": "live",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:subnet/subnet-04fcde1e9e27ede61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fcde1e9e27ede61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125301370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-private-us-east-1b",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-private-us-east-1b",
              "Project": "live",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:subnet/subnet-0266810c787d8136e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0266810c787d8136e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125301370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-private-us-east-1c",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-private-us-east-1c",
              "Project": "live",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:subnet/subnet-0028fc9dbd225b7cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0028fc9dbd225b7cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125301370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-public-us-east-1a",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-public-us-east-1a",
              "Project": "live",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:subnet/subnet-0b292fefe9d8c0d2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b292fefe9d8c0d2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125301370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-public-us-east-1b",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-public-us-east-1b",
              "Project": "live",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:subnet/subnet-08bb305bba75d268d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bb305bba75d268d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125301370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc-public-us-east-1c",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc-public-us-east-1c",
              "Project": "live",
              "Terraform": "true"
            },
            "vpc_id": "vpc-007c47ff9e5452c7b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125301370:vpc/vpc-007c47ff9e5452c7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0596072fb7f296ae3",
            "default_route_table_id": "rtb-00757ee49bc765331",
            "default_security_group_id": "sg-0dd0422ca21ded3a0",
            "dhcp_options_id": "dopt-036444fdcc45caba5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007c47ff9e5452c7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00757ee49bc765331",
            "owner_id": "211125301370",
            "tags": {
              "Environment": "producao",
              "Name": "my-vpc",
              "Project": "live",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "producao",
              "Name": "my-vpc",
              "Project": "live",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}